# marketplace-monitor-backend

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  conanfile.py  dependencies.cmake  options.cmake  pyproject.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
app/: CMakeLists.txt  main.cpp
app/cmake/: install-rules.cmake
app/include/certificates/: certificates.hpp
app/module/: app.cppm  program_options.cppm
cmake/: common_options.cmake  conan.cmake  get-cpm.cmake  install-config.cmake.in  install-rules.cmake  static-analyzers.cmake
core/: CMakeLists.txt
core/cmake/: install-config.cmake.in  install-rules.cmake  options.cmake
core/example/: CMakeLists.txt  core_example.cpp
core/include/monitor/core/: core.hpp  isku_repository.hpp  models.hpp  program_options.hpp  query.hpp  repository.hpp  server.hpp
core/include/monitor/models/: common.hpp  sku_model.hpp  user_model.hpp
core/include/monitor/repository/: isku_repository.hpp  iuser_repository.hpp
core/include/monitor/repository/impl/: telegram_user_repository_impl.hpp  user_repository_impl.hpp
core/include/my_project/core/: core.hpp
core/src/: core.cpp  isku_repository.cpp  repository.cpp
core/src/core/: program_options.cpp
core/src/repository/: isku_repository.cpp  iuser_repository.cpp
core/src/repository/impl/: telegram_user_repository_impl.cpp  user_repository_impl.cpp
core/test/: CMakeLists.txt
core/test/src/: core_test.cpp  object_pool_tests.cpp
domain/: CMakeLists.txt
domain/cmake/: install-rules.cmake
domain/module/domain/: item.cppm  user.cppm
domain/src/domain/: item.cppm  user.cppm
profiles/: clang  msvc  msvc-ninja
repository/: CMakeLists.txt
repository/cmake/: install-config.cmake.in  install-rules.cmake
repository/module/items/: items_repository.cppm
repository/module/users/: users_repository.cppm
repository/src/repository/: items_repository.cppm  items_repository.ixx  users_repository.cppm  users_repository.ixx
service/: CMakeLists.txt
service/include/service/items/: items.cppm  service.cppm
service/items/: CMakeLists.txt
service/items/cmake/: install-rules.cmake  options.cmake
service/items/module/items/: service.cppm
service/items/src/items/: items_grpc.cppm  service.cppm
utility/: CMakeLists.txt
utility/cmake/: install-rules.cmake  options.cmake
utility/example/: utility_example.cpp
utility/include/monitor/utility/: strong_type.hpp
utility/module/utility/: static_string.cppm
utility/src/utility/: static_string.cppm  utility.cppm
utility/test/: CMakeLists.txt
utility/test/src/: utility_test.cpp
